# wetherspoons-api-python

./: .gitignore  DATA_MODELS.md  README.md  get_watchman_drinks.py  mcp-server.py  pyproject.toml  requirements.txt  setup.py  test_live.py
.github/workflows/: publish.yml  test.yml
claude-skill/: SKILL.md
mcp-server/: README.md  mcp-server.py
src/wetherspoons_api/: __init__.py  api.py  mcp_server.py  models.py
src/wetherspoons_mcp/: __init__.py  __main__.py  server.py
tests/: __init__.py  test_api.py  test_mcp_server.py
