[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "wetherspoons-api-python"
version = "1.2.8"
description = "A Python package for accessing JD Wetherspoon's venue and menu data"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Ported from original by Joss Bird"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
wetherspoons-mcp = "wetherspoons_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wetherspoons_api*", "wetherspoons_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
